--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodules/deployable-ui"]
 	path = submodules/deployable-ui
 	url = https://github.com/deployable-tech/deployable-ui
+[submodule "submodules/deployable-knowledge-web"]
+	path = submodules/deployable-knowledge-web
+	url = https://github.com/deployable-tech/deployable-knowledge-web
