--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "submodules/deployable-knowledge-web"]
 	path = submodules/deployable-knowledge-web
 	url = https://github.com/deployable-tech/deployable-knowledge-web
+[submodule "submodules/deployable-db"]
+	path = submodules/deployable-db
+	url = https://github.com/deployable-tech/deployable-db
